# cuteness

./: .gitignore  README.md  pyproject.toml
cuteness/: __main__.py  main.py
cuteness/cogs/: cute.py  help.py
cuteness/discordplus/: __init__.py  bot.py  messageable.py
cuteness/extensions/: randomcat.py  randomfox.py
cuteness/lib/: conf.py  cutepics.py  pathdict.py  paths.py  shelp.py  utils.py
cuteness/lib/cutepics/: __init__.py  core.py  errors.py  utils.py
cuteness/lib/cutepics/sources/: discordsource.py  jsonsource.py  picsource.py  redditsource.py
cuteness/sources/: dogceo.py  floofybotowl.py  nekosgoose.py  nekoslizard.py  nekosmeow.py  nekoswoof.py  randomcat.py  randomdog.py  randomduk.py  randomfox.py  redditcatloaf.py  redditcatloafs.py  redditcatpics.py  redditcockatiel.py  redditfoxes.py  redditpigs.py  redditraccoon.py  redditraccoons.py  redditsquirrels.py  shibabirds.py  shibacats.py  shibashibes.py  somerandombirb.py  somerandomfox.py  somerandomkoala.py  somerandompanda.py  somerandomredpanda.py  swtiny.py  thecatapi.py  thedogapi.py
tests/: test_jsonsources.py  test_redditsources.py  test_sources.py  test_swtiny.py
